--- a/lang/ja.json
+++ b/lang/ja.json
@@ -24,5 +24,8 @@
 
     "Click button below and reset password.":"下のボタンをクリックしてパスワードを再設定してください。",
     "Reset password":"パスワードリセット",
-    "If you did not request a password reset, no further action is required.":"心当たりがない場合は、本メッセージは破棄してください。"
+    "If you did not request a password reset, no further action is required.":"心当たりがない場合は、本メッセージは破棄してください。",
+
+    "Project":"Project",
+    "User":"ユーザー"
 } 
