--- a/lang/ja.json
+++ b/lang/ja.json
@@ -27,5 +27,6 @@
     "If you did not request a password reset, no further action is required.":"心当たりがない場合は、本メッセージは破棄してください。",
 
     "Project":"Project",
-    "User":"ユーザー"
+    "User":"ユーザー",
+    "Admin":"管理"
 } 
