--- a/lang/ja.json
+++ b/lang/ja.json
@@ -3,6 +3,7 @@
     "Login ID":"ログインID",
     "E-Mail Address":"メールアドレス",
     "Password":"パスワード",
+    "New Password":"新しいパスワード",
     "Remember Me":"ログイン状態を保存する",
     "Forgot Your Password?":"パスワードをお忘れですか ?",
     "Register":"登録",
@@ -26,7 +27,11 @@
     "Reset password":"パスワードリセット",
     "If you did not request a password reset, no further action is required.":"心当たりがない場合は、本メッセージは破棄してください。",
 
-    "Project":"Project",
+    "Project":"プロジェクト",
     "User":"ユーザー",
-    "Admin":"管理"
+    "Group":"グループ",
+    "Admin":"管理",
+    "Setting":"設定",
+    "Personalization":"個人設定",
+    "Change Password":"パスワード変更"
 } 
