--- a/lang/ja.json
+++ b/lang/ja.json
@@ -7,10 +7,13 @@
     "Remember Me":"ログイン状態を保存する",
     "Forgot Your Password?":"パスワードをお忘れですか ?",
     "Register":"登録",
+    "Update":"更新",
+    "Delete":"削除",
     "Name":"名前",
     "Confirm Password":"パスワード(確認用)",
     "Reset Password":"パスワードリセット",
     "Send Password Reset Link":"パスワードリセットリンク送信",
+    "Enter your password when logging in":"ログイン時にパスワードを入力する",
     "Logout":"ログアウト",
 
     "Verify Your Email Address":"ユーザ登録を完了してください",
@@ -27,11 +30,20 @@
     "Reset password":"パスワードリセット",
     "If you did not request a password reset, no further action is required.":"心当たりがない場合は、本メッセージは破棄してください。",
 
+    "Half-width alphanumeric characters and some symbols can be used.":"半角英数文字と一部の記号が使用できます。",
+
     "Project":"プロジェクト",
     "User":"ユーザー",
     "Group":"グループ",
     "Admin":"管理",
+    "Administrator":"管理者",
+    "created at":"作成日",
+    "last login at":"最終接続日",
+    "Lock":"ロック",
     "Setting":"設定",
     "Personalization":"個人設定",
-    "Change Password":"パスワード変更"
+    "Change Password":"パスワード変更",
+    "Personal data":"個人情報",
+
+    "New User":"新しいユーザー"
 } 
